file save locally

--- a/server/views/homePage.ejs
+++ b/server/views/homePage.ejs
@@ -6,8 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-      <input type="file" name="profileImage" />
+    <form action="/api/file/upload" method="post" enctype="multipart/form-data">
+      <input type="file" name="fileUpload" />
       <button>Upload</button>
     </form>
   </body>
